# crypto-dt-source

./: .coverage  .dockerignore  .env.example  .env.sync.example  .gitattributes  .gitignore  .hfignore  .project-organization-complete  AFTER_DEPLOYMENT.md  AI_MODELS_FIXES_COMPLETE.md  AI_MODELS_MONITORING_SYSTEM.md  ALL_FIXES_SUMMARY.json  API_ENDPOINTS.md  API_ENDPOINTS_COMPLETE.md  API_ENDPOINTS_QUICK_REFERENCE.md  API_EXPANSION_SUMMARY.md  API_KEYS_UPDATE.md  API_USAGE_GUIDE_COMPLETE.md  APL_FINAL_SUMMARY.md  APL_USAGE_GUIDE.md  APP_IMPLEMENTATION_SUMMARY.md  APP_PY_UPDATE_SUMMARY_FA.md  ARCHIVE_SUMMARY.md  ARCHIVING_COMPLETE.md  AUDIT_REPORT.md  AUDIT_SUMMARY.md  BACKEND_DATA_HUB_SUMMARY.md  BACKEND_STABILITY_COMPLETE.md  BACKGROUND_WORKER_IMPLEMENTATION_FA.md  BEFORE_AFTER_COMPARISON.md  CHANGELOG.md  CHANGELOG_2025-12-06.md  CHANGES_SUMMARY_FA.md  CLIENT_INTEGRATION_GUIDE_FA.md  COINDESK_INTEGRATION_COMPLETE.md  COLLECTORS_IMPLEMENTATION_SUMMARY.md  COLLECTORS_README.md  COMPLETE.json  COMPLETE_DEPLOYMENT_SUCCESS.md  COMPLETE_FIX_SUMMARY.md  (+422 more)
2025-11-28_144929_Data_Flow_Analysis_Report/: DATA_FLOW_DIAGRAMS.md
NewResourceApi/: Function to fetch data from CoinMarketCap API.docx  UPGRADE_ANALYSIS_AND_PROMPT.md  news-market-sentement-api.docx  trading_signals_1764997470349.json
QA/: FINAL_VALIDATION_REPORT.md  HF_DEPLOYMENT_STATUS.md
api/: alphavantage_endpoints.py  auth.py  data_endpoints.py  endpoints.py  hf_auth.py  hf_data_hub_endpoints.py  hf_endpoints.py  massive_endpoints.py  pool_endpoints.py  realtime_monitoring.py  resources_endpoint.py  resources_monitor.py  smart_data_endpoints.py  websocket.py  ws_data_broadcaster.py  ws_data_services.py  ws_integration_services.py  ws_monitoring_services.py  ws_unified_router.py
api-resources/: README.md  api-config-complete__1_.txt  crypto_resources_unified.json  crypto_resources_unified_2025-11-11.json  crypto_resources_unified_backup_20251208_103128.json  ultimate_crypto_pipeline_2025_NZasinich.json
backend/: __init__.py  enhanced_logger.py  feature_flags.py
browser-testing/: IMPLEMENTATION_SUMMARY.md  run_tests.bat  run_tests.sh  test_runner.py
collectors/: QUICK_START.md  README.md  __init__.py  aggregator.py  data_persistence.py  demo_collectors.py  explorers.py  hf_crypto_api_client.py  market_data.py  market_data_extended.py  master_collector.py  news.py  news_extended.py  onchain.py  rpc_nodes.py  scheduler_comprehensive.py  sentiment.py  sentiment_extended.py  whale_tracking.py
config/: api_keys.json  scoring.config.json  service_registry.json  (+1 more)
(+1125 files in other folders)
